--- a/Views/application.html
+++ b/Views/application.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-   <title>Sign Up Form</title>
+   <title>Registration Form</title>
 
           <script  src="/Script/jquery.min.js"></script>
        <script src="/Script/bootstrap.min.js"></script>
@@ -77,7 +77,7 @@
 <div class="container" style="border-color: #00897b ; margin-top: 5%">
   <form action="/students" method="post" enctype="multipart/form-data" >
     <div class="row" >
-      <h4 style = "text-align:center ; ">Registration Form</h4>
+      <h4 style = "text-align:center ; "><font size="6">Registration Form</font></h4>
 
       <div class="file-upload" id="image" name="" >
         <button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">Add Image</button>
@@ -85,7 +85,7 @@
 
 <!-- <<<<<<< HEAD -->
         <div class="image-upload-wrap">
-          <img src="pp.jpg" style="width: 90%">
+          <img src="pp.jpg" style="width: 90%;">
          <input class="file-upload-input" type='file' name="profile_photo" onchange="readURL(this);" accept="image/*" />
 <!-- ======= -->
         <!-- <div class="image-upload-wrap" id="image" name="profile_photo" >
