--- a/Views/guestForm.html
+++ b/Views/guestForm.html
@@ -1,193 +1,203 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" >
+
 <head>
-    <meta charset="utf-8">
-    <title>Guest Form</title>
+  <meta charset="UTF-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+   <title>Guest Form</title>
 
-    
-    
-   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
-   
-    <link rel="stylesheet" href="/Styles/bootstrap.min.css">
-     <script src="/Script/bootstrap.min.js"></script>   
-     <link rel="stylesheet" type="text/css" href="/Styles/guestForm.css">
-    
-</head>
-<body background="new6.jpg" style="background-repeat: no-repeat; background-attachment:  fixed">
-
-
-<div class="topnav" id="top-menu">
-  <!-- <img src="logo.png" class= "pic" alt=""  style="margin-top: 1% ; margin-left:5%; " height="60" width="63" > -->
-    <ul>
-      <li><a href="/">Home</a></li>
-       <li><a  href="/" id="entry">Entry List</a></li>
+          <script  src="/Script/jquery.min.js"></script>
+       <script src="/Script/bootstrap.min.js"></script>
        
-      <!--  <li><a href="/gu" id="gst">Guest Form</a></li>
- -->       <li><a href="/contact" id="cntct">Contact</a></li>
-     <li><a class="right" href="/auth" id="login"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
-       <li><input href="#" class="right search" data-toggle="dropdown" placeholder="Enter Student ID"></input></li>
+      <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
-     </ul>
+  <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+
+      <link rel="stylesheet" href="/Styles/guestForm.css">
+<!--       <link rel="stylesheet" href="toggled-search-bar.css">
+
+ -->
+
+</head>
+
+<body>
+
+<nav class="navbar navbar-inverse " style="background-color:#00897b;color: white ;border-color: #00897b" id="navbar">
+ <div class="container-fluid">
+    
+    <ul class="nav navbar-nav">
+        <li><a  href="/" id="home" style="color: white">Home</a></li>
+        <li><a  href="/" id="entry" style="color: white">Entry List</a></li>
+         <li><a href="/contact" id="cntct" style="color: white">Contact</a></li>
+        <li><a class="right" href="/auth" id="login" style="color:white"><span class="glyphicon glyphicon-log-in" style="color:white"></span> Log In</a></li>
+    </ul>
+  
+
+
+    
+      <div id="navbar" class="navbar-collapse collapse">
+         <div class="hidden-xs navbar-form navbar-right">
+            <a href="#search" class="search-form-tigger btn btn-success"  data-toggle="search-form" style="background-color: white"><i class="fa fa-search" style="color:#00897b" aria-hidden="true"></i></a>
+         </div>
+     <div class="visible-xs navbar-form navbar-right" style="border-color:transparent;">
+            <input type="text" name="search" class=" placeholder="Search..." style="color: blue;">
+         </div>
+         <!--/.navbar-collapse -->
+      </div>
+    </div>
+
+
+  
+</nav>
+
+<div class="search-form-wrapper">
+   <form class="search-form" id="" action="">
+      <div class="input-group">
+         <input type="text" name="search" class=" placeholder="Search">
+         <span class="input-group-addon" id="basic-addon2"><i class="fa fa-search" aria-hidden="true"></i>
+         </span>
+         <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i>
+         </span>
+      </div>
+   </form>
+</div>
+
+
+  
+<div class="container" style="border:10px #00897b ; margin-top: 5%">
+  <form action=""  >
+    <div class="row" >
+
+      <img src="logo.png" style="width: 20% ; margin-left: 40%">
+
+      <h4 style = "text-align:center ; "><font size="6">Guest Form</font></h4>
+
+      <div class="input-group input-group-icon" style="width: 100%;color:   #424949; ">
+             <input type="text" placeholder="Student's Name" name="stdname" required">
+        <div class="input-icon"><i class="fa fa-user" style="color: #00897b"></i></div>
+      </div>
+
+      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+            <input type="number" placeholder="Student's Phone" name="stdphn" required>
+        <div class="input-icon"><i class="fa fa-phone" style="color: #00897b"></i></div>
+      </div>
+
+      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+            <input type="text" placeholder="Guardian's Name"  name="grdnname" required>
+        <div class="input-icon"><i class="fa fa-user" style="color: #00897b"></i></div>
+      </div>
+
+      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+            <input type="email" placeholder="Guardian's Email"  name="grdnmail">
+        <div class="input-icon"><i class="fa fa-envelope " style="color: #00897b"></i></div>
+      </div>
+
+      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+             <input type="number" placeholder="Guardian'sPhone"  name="grdnphn" required>
+        <div class="input-icon"><i class="fa fa-phone" style="color: #00897b"></i></div>
+      </div>
+
+
+      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+            <input type="text" placeholder="Present Address"  name="prsntaddr" required>
+        <div class="input-icon"><i class="fa fa-map-marker " style="color: #00897b"></i></div>
+      </div>
+
+
+
+      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+            <input type="text" placeholder="Course Name"  name="crse" required>
+        <div class="input-icon"><i class="fa fa-graduation-cap " style="color: #00897b"></i></div>
+      </div>
+
+      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+            <input type="number" placeholder="Student ID"  name="stdid" required>
+        <div class="input-icon"><i class="fa fa-address-book " style="color: #00897b"></i></div>
+      </div>
+
+
+      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+             <input type="number" placeholder="Academic Year"  name="acyear" required>
+        <div class="input-icon"><i class="fa fa-calendar " style="color: #00897b"></i></div>
+      </div>
+
+      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+                    <input type="number" placeholder="Level"  name="level" >
+        <div class="input-icon"><i class="fa fa-bookmark " style="color: #00897b"></i></div>
+      </div>
+
+      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+                    <input type="text" placeholder="Reason for Staying"  name="reason" required>
+        <div class="input-icon"><i class="fa fa-question-circle   " style="color: #00897b"></i></div>
+      </div>
+
+      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+                    <input type="text" placeholder="Entering date"  name="from" onfocus="(this.type='date')" required>
+        <div class="input-icon"><i class="fa fa-calendar " style="color: #00897b"></i></div>
+      </div>
+
+      <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
+                    <input type="text" placeholder="Leaving Date"  name="to" onfocus="(this.type='date')" required>
+        <div class="input-icon"><i class="fa fa-calendar " style="color: #00897b"></i></div>
+      </div>
+
+
+    </div>
+
+
+    <div class="row">
+
+       
+        <div class="input-group" style="width: 100%;">
+          <input type="radio" name="gender" value="Male" id="gender-male"/>
+          <label for="gender-male">Male</label>
+          <input type="radio" name="gender" value="Female" id="gender-female"/>
+          <label for="gender-female">Female</label>
+        </div>
+      
+    </div>
+
+    <div class="row">
+      <div >
+                    <input type="submit" name="SUBMIT" class="btn btn-success btn-lg"  style="color: white; background-color: #00897b">
+      </div>
+
+    </div>
+    
+  </form>
 </div>
 
 
 
-<div id="mainContainer" style="margin-left: 30%; margin-top: 100px; " >
-    <div class="logoContainer" style=" width: 500px">
-        <img src="logo.png" alt="" class="float-left" style="margin-top: 3%;height:100% ;width:20%" >    
-        
-    </div>
+<script type="text/javascript">
+  $( document ).ready(function() {
+  $('[data-toggle=search-form]').click(function() {
+      $('.search-form-wrapper').toggleClass('open');
+      $('.search-form-wrapper .search').focus();
+      $('html').toggleClass('search-form-open');
+    });
+    $('[data-toggle=search-form-close]').click(function() {
+      $('.search-form-wrapper').removeClass('open');
+      $('html').removeClass('search-form-open');
+    });
+  $('.search-form-wrapper .search').keypress(function( event ) {
+    if($(this).val() == "Search") $(this).val("");
+  });
 
-    <div style="width: 640px; border: 3px solid #15bf86; background: #333;margin-top:-1%; margin-left:-1.3% ;margin-bottom: 10% ">
-        <form action="/students" method="post" enctype="multipart/form-data" >
-            
-            
-            
-
-           <h1 style="color: white; margin-top: 5% ; text-align: center;">Guest Form</h1>
-    <!-- <img src="pp.jpg" alt="" class="float-right" style="margin-right: 5%; margin-top: 5%" height="100" width="100"> -->
-    <p style="color: white;text-align: center">Please fill in this form for approval.</p>
-
-            <div class="form-group row" >
-
-                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
-                    <input type="text" placeholder="Student's Name" class="form-control" name="stdname" required requiredmessage="Name is required.">
-                </div>
-            </div>
-
-            <div class="form-group row">
-
-                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
-                    <input type="number" placeholder="Student's Phone number" class="form-control" name="stdphn" required>
-                </div>
-            </div>
-
-            <div class="form-group row">
-
-                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
-                    <input type="text" placeholder="guardian's Name" class="form-control" name="grdnname" required>
-                </div>
-            </div>
-
-            <div class="form-group row">
-
-                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
-                    <input type="email" placeholder="guardian's Email" class="form-control"  name="grdnmail">
-                </div>
-            </div>
-
-            <div class="form-group row">
-
-                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
-                    <input type="number" placeholder="guardian's Phone number" class="form-control" name="grdnphn" required>
-                </div>
-            </div>
-
-           
-
-            <div class="form-group row">
-
-                <div class="addr" style=" margin-left:5%; margin-right:-10%; width:115%">
-                    <input type="text" placeholder="Present Address" class="form-control" name="prsntaddr" required>
-                </div>
-            </div>
-
-           
-            <div class="form-group row">
-
-                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
-                    <input type="text" placeholder="Course Name" class="form-control" name="crse" required>
-                </div>
-            </div>
-
-            <div class="form-group row">
-
-                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
-                    <input type="number" placeholder="Student ID" class="form-control" name="stdid" required>
-                </div>
-            </div>
-
-           
-
-            <div class="form-group row">
-
-                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
-                    <input type="number" placeholder="Academic Year" class="form-control" name="acyear" required>
-                </div>
-            </div>
-            
-            <div class="form-group row">
-
-               <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
-                    <input type="number" placeholder="Level" class="form-control" name="level" required>
-                </div>
-            </div>
-
-
-
-            <div class="form-group row">
-
-                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
-                    <input type="text" placeholder="Reason for Staying" class="form-control" name="reason" required>
-                </div>
-            </div>
-
-            <div class="form-group row">
-
-                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
-                    <input type="text" placeholder="Entering date" class="form-control" name="from" onfocus="(this.type='date')" required>
-                </div>
-            </div>
-
-             <div class="form-group row">
-
-                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
-                    <input type="text" placeholder="Leaving Date" class="form-control" name="to" onfocus="(this.type='date')" required>
-                </div>
-            </div>
-
-           
-
-            <fieldset class="form-group row">
-                <div class="col-sm-10">
-                    <div class="form-check"> 
-                        <label class="form-check-label" style="margin-left:38% ; color: white">
-                            <input class="form-check-input" type="radio" name="gender"  value="Male"  >
-                            Male
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <label class="form-check-label" style="margin-left:38% ;color: white">
-                            <input class="form-check-input" type="radio" name="gender"  value="Female" >
-                            Female
-                        </label>
-                    </div>
-
-                </div>
-            </fieldset>
-            
-        
-        
-
-
-            <div class="form-group row">
-
-                <div class="w" style="margin-left:25%; width:115%">
-                    <input type="submit"  class="btn btn-success" name="SUBMIT" style="width: 220px;">
-                </div>
-            </div>
-
-
-        </form>
-    </div>
-</div>
-
+  $('.search-close').click(function(event) {
+    $('.search-form-wrapper').removeClass('open');
+    $('html').removeClass('search-form-open');
+  });
+});
+</script>
 
 
 </body>
-</html>
 
+</html>
