--- a/Views/Styles/guestForm.css
+++ b/Views/Styles/guestForm.css
@@ -22,7 +22,8 @@ input,
 input[type="radio"] + label,
 input[type="checkbox"] + label:before,
 select option,
-select {
+select,
+button{
   width: 100%;
   padding: 1em;
   line-height: 1.4;
