--- a/Views/application.html
+++ b/Views/application.html
@@ -102,7 +102,7 @@
       </div>
 
 
-      <div class="input-group input-group-icon" style="width: 100%;color:   #424949 ">
+      <div class="input-group input-group-icon" style="width: 100%;color:   #424949 ;">
         <input type="text" placeholder="Student's Name" name="stdname" required/>
         <div class="input-icon"><i class="fa fa-user" style="color: #00897b"></i></div>
       </div>
