approved guest list

--- a/Views/guestForm.html
+++ b/Views/guestForm.html
@@ -24,7 +24,7 @@
 
 </head>
 
-<body>
+<body background="new6.jpg">
 
 <nav class="navbar navbar-inverse " style="background-color:#00897b;color: white ;border-color: #00897b" id="navbar">
  <div class="container-fluid">
@@ -57,7 +57,7 @@
 <div class="search-form-wrapper">
    <form class="search-form" id="" action="">
       <div class="input-group">
-         <input type="text" name="search" class=" placeholder="Search">
+         <input type="text" name="search" class="search form-control" placeholder="Search">
          <span class="input-group-addon" id="basic-addon2"><i class="fa fa-search" aria-hidden="true"></i>
          </span>
          <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i>
@@ -65,7 +65,7 @@
       </div>
    </form>
 </div>
-
+   
 
   
 <div class="container" style="border:10px #00897b ; margin-top: 5%">
