--- a/Views/approvedGuest.html
+++ b/Views/approvedGuest.html
@@ -27,7 +27,7 @@
 
 
 
-<body background="new6.jpg">
+<body background="new6.jpg" style="background-repeat: no-repeat;">
 
 	
 <nav class="navbar navbar-inverse " style="background-color:#00897b;color: white ;border-color: #00897b" id="navbar">
