--- a/Views/guestForm.html
+++ b/Views/guestForm.html
@@ -17,6 +17,8 @@
 
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 
 
   <link rel="stylesheet" href="/Styles/guestForm.css">
@@ -57,7 +59,7 @@
 <div class="search-form-wrapper">
    <form class="search-form" id="" action="">
       <div class="input-group">
-         <input type="text" name="search" class="search form-control" placeholder="Search">
+         <input type="text" name="search" class="search form-control" placeholder="Search...">
          <span class="input-group-addon" id="basic-addon2"><i class="fa fa-search" aria-hidden="true"></i>
          </span>
          <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i>
