login page responsive

--- a/Views/auth.html
+++ b/Views/auth.html
@@ -45,7 +45,7 @@
             <a href="#search" class="search-form-tigger btn btn-success"  data-toggle="search-form" style="background-color: white"><i class="fa fa-search" style="color:#00897b" aria-hidden="true"></i></a>
          </div>
           <div class="visible-xs navbar-form navbar-right" style="border-color:transparent;">
-            <input type="text" name="search" class=" placeholder="Search..." style="color: blue;">
+            <input type="text" name="search" class="search form-control" placeholder="Search..." style="color: blue;">
          </div>
          <!--/.navbar-collapse -->
       </div> 
