--- a/Views/first page.html
+++ b/Views/first page.html
@@ -24,7 +24,7 @@
         <li style="background-color: #00897b;" ><a href="" style="background-color: #00897b;">Entry List</a></li>
         <li style="background-color: #00897b;"><a href="/guestform" style="background-color: #00897b;" >Guest Form</a> </li> 
         <li style="background-color: #00897b;"><a href="/approvedguest" style="background-color: #00897b;" >Approved Guests</a> </li>  
-        <li style="background-color: #00897b;"><a href="/" style="background-color: #00897b;">Contact</a> </li>   
+        <li style="background-color: #00897b;"><a href="/contact" style="background-color: #00897b;">Contact</a> </li>   
        
        <li style="background-color: #00897b;" ><a href="login" title="Login" style="background-color: #00897b; ">Login <i class="fa fa-lg fa-sign-in" style="background-color: #00897b;"></i></a></li>
    </ul>
