--- a/Views/guestForm.html
+++ b/Views/guestForm.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body background="new6.jpg">
+<body background="bbb.jpg">
 
 <nav class="navbar navbar-inverse " style="background-color:#00897b;color: white ;border-color: #00897b" id="navbar">
  <div class="container-fluid">
@@ -46,7 +46,7 @@
             <a href="#search" class="search-form-tigger btn btn-success"  data-toggle="search-form" style="background-color: white"><i class="fa fa-search" style="color:#00897b" aria-hidden="true"></i></a>
          </div>
      <div class="visible-xs navbar-form navbar-right" style="border-color:transparent;">
-            <input type="text" name="search" class=" placeholder="Search..." style="color: blue;">
+            <input type="text" name="search" class="search form-control" placeholder="Search..." style="color: blue;">
          </div>
          <!--/.navbar-collapse -->
       </div>
