--- a/Views/login.html
+++ b/Views/login.html
@@ -2,18 +2,32 @@
 <html>
 <head>
 	<meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>SignIn</title>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-  <link rel="stylesheet" href="/Styles/bootstrap.min.css">
+
+  
+    <script  src="/Script/jquery.min.js"></script>
+  <script src="/Script/bootstrap.min.js"></script>
+   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+ 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
+  <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+       <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+
 
   <link rel="stylesheet" type="text/css" href="/Styles/login.css">
  
   <link rel="stylesheet" href="/Styles/toast.css">
   <script src="/Script/toast.js"></script>
   <script type="text/javascript" src="/Script/login.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
+
+<body background="bbb.jpg">
 
 <!-- <div class="topnav">
 
@@ -21,28 +35,59 @@
    
 </div>
  -->
- <div class="topnav" id="top-menu">
-  <!-- <img src="logo.png" class= "pic" alt=""  style="margin-top: 1% ; margin-left:5%; " height="60" width="63" > -->
-    <ul>
 
-      <li><a href="/" id="home">Home</a></li>
-       <li><a  href="/residentstudent" id="entry">Entry List</a></li>
-       <!-- <li><a href="/login" id="login">Log In</a></li> -->
-       <li><a href="#" id="gst">Guest Form</a></li>
-       <li><a href="/contact" id="cntct">Contact</a></li>
-       <li><input href="#" class="right search" data-toggle="dropdown" placeholder="Enter Student ID"></input></li>
-     </ul>
+ <nav class="navbar navbar-inverse " style="background-color:#00897b;color: white ;border-color: #00897b" id="navbar">
+ <div class="container-fluid">
+    
+    <ul class="nav navbar-nav">
+        <li><a  href="/" id="home" style="color: white">Home</a></li>
+        <li><a  href="/" id="entry" style="color: white">Entry List</a></li>
+         <li><a  href="/guestform" id="entry" style="color: white">Guest Form</a></li>
+                  <li><a  href="/approvedguest" id="entry" style="color: white">Approved Guests</a></li>
+         <li><a href="/contact" id="cntct" style="color: white">Contact</a></li>
+        
+    </ul> 
 
+    <div id="navbar" class="navbar-collapse collapse">
+         <div class="hidden-xs navbar-form navbar-right">
+            <a href="#search" class="search-form-tigger btn btn-success"  data-toggle="search-form" style="background-color: white"><i class="fa fa-search" style="color:#00897b" aria-hidden="true"></i></a>
+         </div>
+          <div class="visible-xs navbar-form navbar-right" style="border-color:transparent;">
+            <input type="text" name="search" class="search form-control" placeholder="Search..." style="color: blue;">
+         </div>
+         <!--/.navbar-collapse -->
+      </div> 
+    
+     
+  </div>
+
+  
+</nav>
+ 
+ <div class="search-form-wrapper">
+   <form class="search-form" id="" action="">
+      <div class="input-group">
+         <input type="text" name="search" class="search form-control" placeholder="Search...">
+         <span class="input-group-addon" id="basic-addon2"><i class="fa fa-search" aria-hidden="true"></i>
+         </span>
+         <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i>
+         </span>
+      </div>
+   </form>
 </div>
 
 
-<div class="container" style="width:400px; margin-left: 450px">
+<div class="w3-display-container">
+<div class="w3-display-topmiddle">
+
+
+<div class="container" style="width:400px;">
   <div class="FORM" >
   <div class="imgcontainer">
     <img src="logo.png" alt="Avatar" class="avatar">
   </div>
 
-  <div class="container">
+  <div class="input-group" style="margin-left: 5% ; margin-right: 5%">
     <label for="uname" style="color:#15bf86"><b>Email</b></label>
     <input type="text" placeholder="Enter Email ID" name="uname" id="usrname" required>
 
@@ -53,11 +98,37 @@
     <label>
   </div>
 
-  <div class="container" style="background-color:#f1f1f1">
-     <a href="/auth"><button type="button" class="cancelbtn" id="cnclbtn">Cancel</button></a>
-    <span class="psw">Forgot <a href="/pwreset">password?</a></span>
+  <div class="input-group" style="background-color:#f1f1f1 ;width: 100%;margin-top: 4% ;">
+     <a href="/auth" style="margin-left:2%;"><button type="button" class="cancelbtn" id="cnclbtn">Cancel</button></a>
+    <span style="margin-right:2% ; "  class="psw">Forgot <a href="/pwreset">password?</a></span>
   </div>
 </div>
 </div>
+
+</div>
+</div>
+
+
+<script type="text/javascript">
+  $( document ).ready(function() {
+  $('[data-toggle=search-form]').click(function() {
+      $('.search-form-wrapper').toggleClass('open');
+      $('.search-form-wrapper .search').focus();
+      $('html').toggleClass('search-form-open');
+    });
+    $('[data-toggle=search-form-close]').click(function() {
+      $('.search-form-wrapper').removeClass('open');
+      $('html').removeClass('search-form-open');
+    });
+  $('.search-form-wrapper .search').keypress(function( event ) {
+    if($(this).val() == "Search") $(this).val("");
+  });
+
+  $('.search-close').click(function(event) {
+    $('.search-form-wrapper').removeClass('open');
+    $('html').removeClass('search-form-open');
+  });
+});
+</script>
 </body>
 </html>
