--- a/Views/contact.html
+++ b/Views/contact.html
@@ -70,7 +70,7 @@
    
 
   
-<div class="container" style="border:10px #00897b ; margin-top: 5%">
+<div class="container" style="border:10px #00897b ; margin-top: 5%;margin-bottom: 7%">
   
     
 
