--- a/Views/guestForm.html
+++ b/Views/guestForm.html
@@ -34,6 +34,7 @@
     <ul class="nav navbar-nav">
         <li><a  href="/" id="home" style="color: white">Home</a></li>
         <li><a  href="/" id="entry" style="color: white">Entry List</a></li>
+        <li><a  href="/approvedguest" id="apprvd" style="color: white">Approved Guests</a></li>
          <li><a href="/contact" id="cntct" style="color: white">Contact</a></li>
         <li><a class="right" href="/auth" id="login" style="color:white"><span class="glyphicon glyphicon-log-in" style="color:white"></span> Log In</a></li>
     </ul>
@@ -70,7 +71,8 @@
    
 
   
-<div class="container" style="border:10px #00897b ; margin-top: 5%">
+<div class="container" style="margin-top: 5%;">
+  
   <form action="/guestform" method="post"  >
     <div class="row" >
 
@@ -154,7 +156,7 @@
     <div class="row">
 
        
-        <div class="input-group" style="width: 100%;">
+        <div class="input-group" style="width: 100%;color: #515a5a">
           <input type="radio" name="gender" value="Male" id="gender-male"/>
           <label for="gender-male">Male</label>
           <input type="radio" name="gender" value="Female" id="gender-female"/>
@@ -171,6 +173,7 @@
     </div>
     
   </form>
+
 </div>
 
 
