--- a/Views/approvedGuest.html
+++ b/Views/approvedGuest.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
+<meta charset="UTF-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 <title>Approved Guest</title>
 
-	<link href="/Styles/approvedGuest.css" rel="stylesheet"/>
+	
 	<script  src="/Script/jquery.min.js"></script>
-  <script src="/Script/bootstrap.min.js"></script>
+  
        
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
   
@@ -19,9 +21,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   
-<link rel="stylesheet" href="toggled-search-bar.css">
+<!-- <link rel="stylesheet" href="toggled-search-bar.css"> -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="/Script/bootstrap.min.js"></script>
+<link href="/Styles/approvedGuest.css" rel="stylesheet"/>
 
 </head>
 
