--- a/Views/Styles/auth.css
+++ b/Views/Styles/auth.css
@@ -24,10 +24,13 @@
   text-align: center;
   font-size: 28px;
   padding: 20px;
-  width: 350px;
+  /*width: 350px;*/
   transition: all 0.5s;
   cursor: pointer;
-  margin: 10px 480px;
+  /*margin: 10px 480px;*/
+  margin-top: 5%;
+  width: 85%;
+  margin-left: 5%;
  }
 
 .button span {
@@ -71,4 +74,17 @@
    // background: black;
     color:#0645AD !important;
 
+}
+
+
+.amar-container{
+  margin-left: 20%;
+  width: 60%;
+  background-color: red;
+  margin-top: 30%;
+}
+.amar-container a{
+  width: 100%;
+  height: 100px;
+  text-align: center;
 }
