--- a/Views/auth.html
+++ b/Views/auth.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Role</title>
+  <title>SignIn</title>
 
-
-    <link rel="stylesheet" type="text/css" href="/Styles/auth.css">
-
-    <script  src="/Script/jquery.min.js"></script>
-  <script src="/Script/bootstrap.min.js"></script>
-       
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
   
+  <script  src="/Script/jquery.min.js"></script>
+  <script src="/Script/bootstrap.min.js"></script>
+   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+ 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-       <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 
+  <link rel="stylesheet" type="text/css" href="/Styles/auth.css">
 
 
 </head>
-<body background="bbb.jpg">
+<body background="bbb.jpg" style="background-repeat: no-repeat;background-attachment: fixed;background-size: cover;" >
 
 
 <nav class="navbar navbar-inverse " style="background-color:#00897b;color: white ;border-color: #00897b" id="navbar">
@@ -70,14 +68,22 @@
 
 
 <div class="w3-display-container">
-<div class="w3-display-topmiddle">
+  <div class="w3-display-topmiddle">
 
-<a href="/login?auth=dsw"><button class="button" id="provost"style="margin-top: 150px"><span>Provost </span></button></a>
-<a href="/login?auth=manager"><button class="button" id="manager"><span>Manager </span></button></a>
-<a href="/login?auth=Ansar"><button class="button" id="ansar"><span>Ansar </span></button></a>
+    <a href="/login?auth=dsw"><button class="button" id="provost"style="margin-top: 150px"><span>Provost </span></button></a>
+    <a href="/login?auth=manager"><button class="button" id="manager"><span>Manager </span></button></a>
+    <a href="/login?auth=Ansar"><button class="button" id="ansar" style="margin-bottom: 100px"><span>Ansar </span></button></a>
 
+  </div>
 </div>
-</div>
+<!-- <div style="margin-bottom: 100px"></div> -->
+
+<!-- <div class="amar-container">
+    <a href="/login?auth=dsw"><button class="button" id="provost"style="margin-top: 150px"><span>Provost </span></button></a>
+    <a href="/login?auth=manager"><button class="button" id="manager"><span>Manager </span></button></a>
+    <a href="/login?auth=Ansar"><button class="button" id="ansar"><span>Ansar </span></button></a>
+</div> -->
+
 
 
 <script type="text/javascript">
