--- a/Views/approvedGuest.html
+++ b/Views/approvedGuest.html
@@ -22,10 +22,11 @@
 
   
 <!-- <link rel="stylesheet" href="toggled-search-bar.css"> -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="/Script/bootstrap.min.js"></script>
-<link href="/Styles/approvedGuest.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="/Script/bootstrap.min.js"></script>
+  <link href="/Styles/approvedGuest.css" rel="stylesheet"/>
+  <script type="text/javascript" src="/Script/ApprovedGuest.js"></script>
 
 </head>
 
@@ -90,31 +91,22 @@
 					<th id="nameleft">Name</th>
 					<th>Course</th>
 					<th>Student ID</th>
-					<th>Reason for Staying</th>
-				    <th>Gender</th>
-					<th>Entering Date</th>
-                    <th>Leaving Date</th>
-                    <th>Request</th>					
+				  <th>Level</th>
+			
+					<th>Status</th>					
 					
 					
 				</tr>
 			</thead>
-			<tbody id="mydata">
-				 <tr>
+			<tbody id="guests">
+				 <!-- <tr>
 					<td class="left">mila</td>
 					<td>cse</td>
 					<td>4</td>
-					<td>karon nai</td>
 					<td>female</td>
-					<td >01/04/2018</td>
-					<td>01/04/2018</td>
-					<td><select class="matha" name="rqst"  style="width: 100%;">
-       					<option value="acc" s>Accepted</option> <!-- -_- eivabe -->
-       					<option value="rej">Rejected</option>
-        				<option value="pend">Pending</option>
-					</td>
+				  <td>Pending</td>
 
-				</tr>
+				</tr> -->
 				
 				
 			</tbody>
