--- a/Views/contact.html
+++ b/Views/contact.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body background="bbb.jpg">
+<body background="bbb.jpg" style="background-repeat: no-repeat;background-attachment: fixed;opacity: 2;">
 
 <nav class="navbar navbar-inverse " style="background-color:#00897b;color: white ;border-color: #00897b" id="navbar">
  <div class="container-fluid">
@@ -70,7 +70,7 @@
    
 
   
-<div class="container" style="border:10px #00897b ; margin-top: 5%;margin-bottom: 7%">
+<div class="container" style=" margin-top: 5%;margin-bottom: 7%">
   
     
 
