--- a/Views/guestProfile.html
+++ b/Views/guestProfile.html
@@ -21,6 +21,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
   <link rel="stylesheet" href="/Styles/guestProfile.css">
   <script type="text/javascript" src="/Script/guestprofile.js"></script>
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 </head>
 
@@ -37,7 +38,14 @@
 
 
 <div id ="loading" >
-  <img src="https://media1.tenor.com/images/8ac12962c05648c55ca85771f4a69b2d/tenor.gif?itemid=9212724" style="width: 30%; margin-left: 35%;margin-top: 10%">
+    <div class="w3-container">
+
+        <div class="w3-display-middle">
+            <div class="loader"></div>
+        </div>
+
+    </div>
+
 </div>
   
 <div class="container" style="border:10px #00897b ; margin-top: 5%">
