--- a/Views/Styles/contact.css
+++ b/Views/Styles/contact.css
@@ -26,6 +26,7 @@ h4 {
   margin: 0em auto;
   background-color: #fff;
   border-radius: 4.2px;
+  border-color:#00897b !important;
  border-style: solid;
   box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, 0.2);
 }
