--- a/Views/Styles/guestForm.css
+++ b/Views/Styles/guestForm.css
@@ -11,7 +11,8 @@ body {
   font-size: 15px;
   color: #b9b9b9;
   background-color: #e3e3e3;
-// background-repeat: no-repeat;
+ background-repeat: no-repeat;
+ background-attachment: fixed;
 
 
 }
